[package]
name = "bevy_punchthrough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
bevy = {version = "0.7", features=["dynamic"]} ## RUN WITH NIGHTLY FEATURE FOR FASTER LINKING
bevy_renet = "0.0.4"
bincode = "1.3.3"
serde = "1.0.140"